feat: add interview scheduler
1. Add Sequelize schema for Interview model.
2. Add `create-interviews-table` migration.
3. Add ES mapping for interviews.
4. Update existing index/re-index, and import/export scripts for the applied changes.
5. Add/implement the following endpoints.
  * `PATCH /jobCandidates/:jobCandidateId/requestInterview`
  * `PATCH /jobCandidates/:jobCandidateId/updateInterview/:round`
  * `GET /jobCandidates/:jobCandidateId/interviews`
  * `GET /jobCandidates/:jobCandidateId/interviews/:round`
6. Update the existing JobCandidate endpoints for applied changes.
7. Set up an hourly scheduled job to check & update Completed interviews.
8. Update `TeamService.sendEmail` for the interview scheduling feature.
9. Update POSTMAN collection & environment.
10. Update Swagger.
